[package]
name = "rgmail"
version = "0.1.0"
authors = ["Joshua M. Clulow <josh@sysmgr.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features =  [ "blocking", "json" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde-aux = "0.6"
slog = "2.5"
httparse = "1.3.4"
base64 = "0.10"
mime = "0.3.16"
