[package]
name = "rgmail"
version = "0.2.1"
edition = "2021"
license = "MPL-2.0"
description = "Gmail API Client"
repository = "https://github.com/jclulow/rgmail"

[dependencies]
reqwest = { version = "0.11", features =  [ "json" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde-aux = "3.0.1"
slog = "2.5"
httparse = "1.5.1"
base64 = "0.13"
mime = "0.3.16"
anyhow = "1.0.31"
futures-core = "0.3.19"
